retoques finales al proyecto

--- a/ProyectoEmail/ayuda/output/dictionnary.html
+++ b/ProyectoEmail/ayuda/output/dictionnary.html
@@ -1,6 +1,5 @@
 <HEAD>
 <meta http-equiv="content-type" content="text/html" charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="stylesheet" type="text/css" href="resources/stylesheet.css">
 <link rel="stylesheet" type="text/css" href="resources/jquery/jquery-ui.css">
 <script type="text/javascript" src="resources/jquery/external/jquery/jquery.js"></script>
@@ -9,32 +8,27 @@
 <script type="text/javascript" src="resources/articles.js"></script>
 <script type="text/javascript" src="resources/searchOnTitles.js"></script>
 </HEAD>
+<div class="left">
+ <a href="index.html">Home</a> 
+<br/>
+ <a href="categories.html">Categories</a> 
+</div>
+<div class="middle">
 <HTML>
 <HEADER>
 <iframe class="header" src="header.html" frameBorder="0" scrolling="no"></iframe> 
 </HEADER>
 <BODY>
-<div class="top">
-<div class="ui-widget">
+<H1>Dictionnary</H1>
 
-<input id="tags" placeholder="Search..." class="searchField" />
-</div>
-</div>
-<div class="left">
- <a href="categories.html">Categories</a> 
-<br/>
- <a href="dictionnary.html">Dictionnary</a> 
-<br/>
-</div>
-<div class="middleForIDX">
-<P>
-<div  class="justifiedAuto" >
- Help system for the Mail Application.<br/>
-This app allows you to manage your Google Email Accounts.<br/>
-You can add multiple accounts, let you see all your folders with the email on them<br/>
-and send email, among other features.<br/>
- <a href="articles/article_get_started.html">Get Started</a></div>
-</P>
+<hr/>
+<H1>A</H1>
+ <a href="articles/article_account_management.html">Account Management</a> : You can see how to add a new account in this article Get started<br/>
+ <a href="articles/article_alarm_configuration.html">Alarm Configuration</a> : To configure an alarm you need to access the "Configuracion Menu"<br/>
+<H1>E</H1>
+ <a href="articles/article_email_actions.html">Email Actions</a> : Here you can see how to manage an email<br/>
+<H1>G</H1>
+ <a href="articles/article_get_started.html">Get Started</a> : First of all you need to add an Email Account<br/>
 
 <hr/>
 </div>
