--- a/ProyectoEmail/ayuda/output/categories.html
+++ b/ProyectoEmail/ayuda/output/categories.html
@@ -1,6 +1,5 @@
 <HEAD>
 <meta http-equiv="content-type" content="text/html" charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="stylesheet" type="text/css" href="resources/stylesheet.css">
 <link rel="stylesheet" type="text/css" href="resources/jquery/jquery-ui.css">
 <script type="text/javascript" src="resources/jquery/external/jquery/jquery.js"></script>
@@ -14,27 +13,17 @@
 <iframe class="header" src="header.html" frameBorder="0" scrolling="no"></iframe> 
 </HEADER>
 <BODY>
-<div class="top">
-<div class="ui-widget">
-
-<input id="tags" placeholder="Search..." class="searchField" />
-</div>
-</div>
 <div class="left">
- <a href="categories.html">Categories</a> 
+ <a href="index.html">Home</a> 
 <br/>
  <a href="dictionnary.html">Dictionnary</a> 
-<br/>
 </div>
-<div class="middleForIDX">
-<P>
-<div  class="justifiedAuto" >
- Help system for the Mail Application.<br/>
-This app allows you to manage your Google Email Accounts.<br/>
-You can add multiple accounts, let you see all your folders with the email on them<br/>
-and send email, among other features.<br/>
- <a href="articles/article_get_started.html">Get Started</a></div>
-</P>
+<div class="middle">
+<H1>Categories</H1>
+
+<hr/>
+<div class="bigLineHeight">
+</div>
 
 <hr/>
 </div>
